--- a/javascript/DOM/9_DOM.html
+++ b/javascript/DOM/9_DOM.html
@@ -3,11 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>DOM Learning</title>
+<style>
+    html{
+        background-color: blueviolet;
+    }
+</style>
 </head>
 <body>
-    <div class="bg-black">
-        <h1 class="heading">DOM Learning on chai aur code </h1>
+    <!-- <div class="bg-black">
+        <h1 id="title" class="heading">DOM Learning on chai aur code
+            <Span style="display: none;">test text</Span> </h1>
         <p>Lorem ipsum dolor sit .</p>
-    </div>
+    <h1>hello</h1>
+    <h1>world</h1>
+    <input type="password" name="hello" id="">
+    </div> -->
+
+
+
+
+<div class="parent">
+    <div class="day">Mon</div>
+    <div class="day">Tue</div>
+    <div class="day">Wed</div>
+    <div class="day">Thu</div>
+    <div class="day">Fri</div>
+    <div class="day">Sat</div>
+</div>
+<script>
+   const parent= document.querySelector('.parent')
+//    console.log(parent);
+//    console.log(parent.children);
+//    console.log(parent.children[0]);
+
+//    console.log(parent.children[0].innerHTML);
+//    //we get html collection here
+   
+   for (let i = 0; i< parent.children.length; i++) {
+    console.log(parent.children[i].innerHTML);
+    
+   }
+
+</script>
+
 </body>
 </html>
+
+<!-- 
+DOM==>DOCUMENT OBJECT MODEL
+HEAD,BODY EVERYTHING IS OBJECT 
+
+
+console.log(window)//track you -->
+<!-- window.document//document side code -->
+
+<!-- gives you second link on webpage 
+console.log(document.links[2])
+
+//shows that element with that id
+document.getElementbyId('firstHeading')
+
+//making manipulation in html code
+document.getElementbyId('firstHeading').innerHTML="<h1>chai aur code</h1> "
+
+in document class=className, in react also
+eh es krke kioki react ch class nu classname likhde a
+
+
+//setattribute overwrites the id/class
